--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,7 +1,15 @@
 ARG PHP_TAG
 FROM php:$PHP_TAG
 
-# Install required extensions
+# install Debian packages
+ARG APT_GET
+RUN test -z "$APT_GET" || ( \
+    apt-get update && \
+    apt-get install -y $APT_GET ; \
+    apt-get clean ; \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* )
+
+# install required PHP extensions
 ARG PHP_EXT
 RUN test -z "$PHP_EXT" || docker-php-ext-install $PHP_EXT
 
